# stock-logistics-transport

./: .copier-answers.yml  .pre-commit-config.yaml  .travis.yml  README.md  test-requirements.txt
migration_stock_picking_multiple_carrier/: README.rst  __init__.py  __openerp__.py  stock_picking.py  trigger.xml
purchase_requisition_transport_multi_address/: README.rst  __manifest__.py  __openerp__.py
purchase_transport_multi_address/: README.rst  __manifest__.py  __openerp__.py
sale_transport_multi_address/: README.rst  __manifest__.py  __openerp__.py
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
shipment_advice/: README.rst  __manifest__.py
shipment_advice_bill_auto_complete/: README.rst  __manifest__.py
shipment_advice_bill_auto_complete_mrp/: README.rst  __manifest__.py
shipment_advice_cash_on_delivery/: README.rst  __manifest__.py
shipment_advice_invoice_auto_complete/: README.rst
shipment_advice_planner/: README.rst  __manifest__.py  hooks.py
shipment_advice_planner_toursolver/: README.rst  __manifest__.py
shipment_advice_planner_toursolver_queue_job/: README.rst  __manifest__.py
shipment_advice_reception_planner/: README.rst  __manifest__.py
shipment_planning/: __manifest__.py
shipment_planning_maxoptra/: __manifest__.py  const.py
stock_addresses/: README.rst
stock_chartering/: __manifest__.py
stock_depot/: README.rst  __manifest__.py
stock_dock/: README.rst  __manifest__.py
stock_internal_transfer/: __openerp__.py  stock_internal_transfer.py
stock_location_address/: README.rst  __manifest__.py
tms/: README.rst  (+1 more)
(+557 files in other folders)
