[project]
name = "odoo-addons-oca-stock-logistics-transport"
version = "17.0.20241016.0"
dependencies = [
    "odoo-addon-tms>=17.0dev,<17.1dev",
    "odoo-addon-tms_account_asset>=17.0dev,<17.1dev",
    "odoo-addon-tms_product>=17.0dev,<17.1dev",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 17.0",
]
